{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 46,
  "lineage": "4fcd10f6-1d53-38e3-a039-1d3d1e5cceda",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloudethix-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0212b0b249cb7e9c8",
            "association_id": "eipassoc-0fe0fb55c4a300225",
            "domain": "vpc",
            "id": "eipalloc-0212b0b249cb7e9c8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06c6e2aa603bc55fd",
            "private_dns": "ip-10-0-1-238.ec2.internal",
            "private_ip": "10.0.1.238",
            "public_dns": "ec2-34-224-233-217.compute-1.amazonaws.com",
            "public_ip": "34.224.233.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "user": "vpc"
            },
            "tags_all": {
              "user": "vpc"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07dc2dd8e0efbc46a",
            "arn": "arn:aws:ec2:us-east-1:509002973204:instance/i-03682f63bbc19b5d1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03682f63bbc19b5d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e6d24cff9eb8be53",
            "private_dns": "ip-10-0-3-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.137",
            "public_ip": "3.94.101.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092babf76b4d6878d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bbb361ced02ecbaa",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011806d9f43024cbc"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_sg",
            "aws_subnet.cloudethix-sub-private01",
            "data.aws_ami.dev_ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07dc2dd8e0efbc46a",
            "arn": "arn:aws:ec2:us-east-1:509002973204:instance/i-0f01b55627444b472",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f01b55627444b472",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-046dbf260a1c85f9f",
            "private_dns": "ip-10-0-3-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.252",
            "public_ip": "44.203.179.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d08435dcc642bdb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bbb361ced02ecbaa",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011806d9f43024cbc"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_sg",
            "aws_subnet.cloudethix-sub-private01",
            "data.aws_ami.dev_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudethix-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:internet-gateway/igw-0e2ec422061c37c46",
            "id": "igw-0e2ec422061c37c46",
            "owner_id": "509002973204",
            "tags": {
              "user": "vpc"
            },
            "tags_all": {
              "user": "vpc"
            },
            "vpc_id": "vpc-0372ffc9117e4ab44"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cloudethix-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0212b0b249cb7e9c8",
            "connectivity_type": "public",
            "id": "nat-0f25901d7c3a4e6f3",
            "network_interface_id": "eni-06c6e2aa603bc55fd",
            "private_ip": "10.0.1.238",
            "public_ip": "34.224.233.217",
            "subnet_id": "subnet-032d9c52e7a117924",
            "tags": {
              "user": "vpc"
            },
            "tags_all": {
              "user": "vpc"
            }
          },
          "dependencies": [
            "aws_eip.cloudethix-eip",
            "aws_subnet.cloudethix-sub-public01",
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "cloudethix-route-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-095bd5f4ad359fafd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f25901d7c3a4e6f3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-095bd5f4ad359fafd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.cloudethix-nat",
            "aws_route_table.cloudethix-RT-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "cloudethix-route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e2ec422061c37c46",
            "id": "r-rtb-0f6bc598b966c15021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6bc598b966c1502",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloudethix-igw",
            "aws_route_table.cloudethix-RT-public",
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudethix-RT-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:route-table/rtb-095bd5f4ad359fafd",
            "id": "rtb-095bd5f4ad359fafd",
            "owner_id": "509002973204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f25901d7c3a4e6f3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "user": "vpc"
            },
            "tags_all": {
              "user": "vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0372ffc9117e4ab44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudethix-RT-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:route-table/rtb-0f6bc598b966c1502",
            "id": "rtb-0f6bc598b966c1502",
            "owner_id": "509002973204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2ec422061c37c46",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "user": "vpc"
            },
            "tags_all": {
              "user": "vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0372ffc9117e4ab44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudethix-RTASS-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059465b33401e1b49",
            "route_table_id": "rtb-095bd5f4ad359fafd",
            "subnet_id": "subnet-0bbb361ced02ecbaa"
          },
          "dependencies": [
            "aws_route_table.cloudethix-RT-private",
            "aws_subnet.cloudethix-sub-private01",
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudethix-RTASS-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a2b3089a5496dac",
            "route_table_id": "rtb-0f6bc598b966c1502",
            "subnet_id": "subnet-032d9c52e7a117924"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc",
            "aws_route_table.cloudethix-RT-public",
            "aws_subnet.cloudethix-sub-public01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:security-group/sg-011806d9f43024cbc",
            "description": "Allow dev inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-011806d9f43024cbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev_sg",
            "name_prefix": "",
            "owner_id": "509002973204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dynamic"
            },
            "tags_all": {
              "Name": "dynamic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0372ffc9117e4ab44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "qa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:security-group/sg-0911879275daef0f3",
            "description": "Allow QA inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0911879275daef0f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "qa_sg",
            "name_prefix": "",
            "owner_id": "509002973204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dynamic"
            },
            "tags_all": {
              "Name": "dynamic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0372ffc9117e4ab44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudethix-sub-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:subnet/subnet-0bbb361ced02ecbaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbb361ced02ecbaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509002973204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "vpc"
            },
            "tags_all": {
              "user": "vpc"
            },
            "vpc_id": "vpc-0372ffc9117e4ab44"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudethix-sub-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:subnet/subnet-030f73e66b60a730a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030f73e66b60a730a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509002973204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "vpc"
            },
            "tags_all": {
              "user": "vpc"
            },
            "vpc_id": "vpc-0372ffc9117e4ab44"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudethix-sub-public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:subnet/subnet-032d9c52e7a117924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032d9c52e7a117924",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509002973204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "vpc"
            },
            "tags_all": {
              "user": "vpc"
            },
            "vpc_id": "vpc-0372ffc9117e4ab44"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudethix-sub-public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:subnet/subnet-04d987aabe74e0a69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d987aabe74e0a69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509002973204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "user": "vpc"
            },
            "tags_all": {
              "user": "vpc"
            },
            "vpc_id": "vpc-0372ffc9117e4ab44"
          },
          "dependencies": [
            "aws_vpc.cloudethix-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudethix-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509002973204:vpc/vpc-0372ffc9117e4ab44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008fa059a43c97ca2",
            "default_route_table_id": "rtb-0cef3a4842c50fc46",
            "default_security_group_id": "sg-0d1056bc9397f2103",
            "dhcp_options_id": "dopt-088ab15e258363a8d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0372ffc9117e4ab44",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cef3a4842c50fc46",
            "owner_id": "509002973204",
            "tags": {
              "user": "vpc"
            },
            "tags_all": {
              "user": "vpc"
            }
          }
        }
      ]
    }
  ]
}